crates/tinyone_core/tests/programs/fail_compile/004_call_before_definition.to
print add(1, 2)
fn add(a, b) {
  return a + b
}
